# gungnir

./: CMakeLists.txt  INSTRUCTIONS  README.md  cameraexception.hpp  drawrectangle.hpp  glwidget.cpp  glwidget.hpp  glwidget.hpp~  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matbuffer.hpp  meanshiftshader.hpp  meanshiftshader_old.hpp  neuralDaniel-cleaning-fixed.hpp  neuralDaniel-cleaning.hpp  neuralDaniel.hpp  old_glwidget.cpp  opencvframeserver.hpp  singlepass.hpp  threadedopencvframeserver.hpp  tracker.hpp  trackerwindow-neural.hpp  trackerwindow-wisard.hpp  trackerwindow.hpp  trackerwindow.hpp.cpp  wisardtracker.hpp
shaders/: binFrame.frag  binarize.frag  classifier-new.frag  classifier.frag  dbug.frag  debug.frag  descriptor.frag  fulldbug.frag  histogram.frag  histogramCompute.comp  histogram_old.frag  meanshift.frag  meanshift_old.frag  p.frag  p_old.frag  rectangle.vert  rendertexture.frag  singlepass.frag  sum.frag  sum_old.frag
